build: harden NullAway, ArchUnit, and OpenRewrite static analysis (#16)
Expand the three analysis tools to their thorough form, keeping every
existing constraint (Spotless owns formatting, NullAway/JSpecify own
nullability, OpenRewrite never blocks a commit).

NullAway
- JSpecifyMode + AcknowledgeRestrictiveAnnotations + ExhaustiveOverride +
  CheckContracts + AssertsEnabled, and CheckOptionalEmptiness taught about
  OptionalInt/Long/Double via CheckOptionalEmptinessCustomClasses.
- Add @NullMarked package-info to all 5 main + 3 test packages (AnnotatedPackages
  stays as the required baseline; OnlyNullMarked deliberately unset).
- Turn NullAway from OFF to ERROR on test sources (+ HandleTestAssertionLibraries).

ArchUnit (2 -> 12 rules, migrated to @AnalyzeClasses/@ArchTest)
- Full layeredArchitecture onion, no package cycles, three directional rules.
- FFM and MethodHandle confined to core.Pix/core.Leptonica by fully-qualified
  name (rename/collision-proof); java.nio.file.Files confined to runner/report
  (+ the Leptonica load-time probe).
- GeneralCodingRules: no java.util.logging, no JodaTime, no generic exceptions,
  no standard-stream access.
- Nullness annotations allow-listed to JSpecify (rejects any other vocabulary,
  including ones not yet on the classpath).

Runner: route the progress counter through SLF4J instead of System.err, so the
standard-streams rule passes with no exceptions (all other output already logs).

OpenRewrite
- Add rewrite-testing-frameworks/logging-frameworks/migrate-java (BOM-managed)
  and rewrite-java-security (catalog-pinned; not in the recipe BOM).
- Curated rewrite.yml: CommonStaticAnalysis, JUnit5BestPractices,
  AssertionsArgumentOrder, ParameterizedLogging, JavaSecurityBestPractices,
  UpgradeToJava21. CodeCleanup is deliberately excluded (it bundles layout
  recipes that fight google-java-format and HideUtilityClassConstructor, which
  misfires on all-static test classes). *.gradle.kts excluded from rewrite.
- Non-blocking 